objects/Disable_Button__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This object help to disable the schedule button for 5 after user clicks on it.</description>
    <fields>
        <fullName>Schedule_Count__c</fullName>
        <label>Schedule Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Schedule_Time__c</fullName>
        <label>Schedule Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>isDisabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isDisabled</label>
        <type>Checkbox</type>
    </fields>
    <label>Schedule Button Disable</label>
</CustomObject>